--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-<div class="swiper-container-vertical  section-folder">
+<div class="swiper-container-vertical  wrapper">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
             <section class="top-slide fluid">
@@ -64,9 +64,14 @@
                         <div class="swiper-slide sl-img-2"></div>
                         <div class="swiper-slide sl-img-3"></div>
                         <div class="swiper-slide sl-img-4"></div>
+                        <div class="swiper-slide sl-img-2"></div>
+                        <div class="swiper-slide sl-img-3"></div>
+                        <div class="swiper-slide sl-img-4"></div>
                     </div>
                     <!-- Add Pagination -->
                     <div class="swiper-pagination-horizontal swiper-pagination"></div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
                 </div>
                 <!-- Swiper JS -->
             </section>
@@ -74,8 +79,10 @@
         </div>
     </div>
     <!-- Add Pagination -->
-    <div class="swiper-pagination swiper-pagination-vertical"></div>
+    <div class="on-bottom">You on bottom of page</div>
+    <div class="on-top">You on top of page</div>
 </div>
+<div class="swiper-pagination swiper-pagination-vertical"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.0/js/swiper.min.js"></script>
 <script src="./js/main.js"></script>
